5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1834_2603.log
== TEST (2019-07-01 08:47:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a[i,j]=sorted(a,reverse=true)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 08:47:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a[i,j]=sorted(a,reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 08:48:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a[i]=sorted(a,reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 08:49:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a[i]=sorted(a[i,j],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 08:49:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a=sorted(a,reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:06:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a=shape[1]
		a=sorted(a,reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 09:07:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	for j in a:
		a=shape[1]
		a=sorted(a,reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:52:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	a[ :, i]=sorted(a[ ; ,i],reverse=True)
print(a)
-- ERROR:
File "XXXX", line 5
    a[ :, i]=sorted(a[ ; ,i],reverse=True)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:52:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in a:
	a[ :, i]=sorted(a[ : ,i],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in range(shape(a)[1]):
	a[ :, i]=sorted(a[ : ,i],reverse=True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 12:54:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("digite: ")))
for i in range(shape(a)[1]):
	a[ :, i]=sorted(a[ : ,i],reverse=True)
print(a)
-- EXECUTION TIME:
1.13971
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
